--- a/serveRecos-app/apps/templates/includes/navigation.html
+++ b/serveRecos-app/apps/templates/includes/navigation.html
@@ -42,7 +42,7 @@
                                         <h6 class="d-block mb-3 text-primary">Landings</h6>
                                         <ul class="list-style-none mb-4">
                                             <li class="mb-2 megamenu-item">
-                                                <a class="megamenu-link" href="/landing-freelancer.html">Freelancer</a>
+                                                <a class="megamenu-link" href="/about_me.html">About Me</a>
                                             </li>
                                         </ul>
                                     </div>
