modifying footers and about

--- a/serveRecos-app/apps/templates/home/about_me.html
+++ b/serveRecos-app/apps/templates/home/about_me.html
@@ -37,7 +37,7 @@
                             </li>
                             <li class="list-inline-item">
                                 <a class="icon icon-md icon-linkedin me-2" data-toggle="tooltip" data-placement="top" title="linkedin">
-                                    <span class="fab fa-linkedin"><a href="www.linkedin.com/in/michaelryanriley" target="_blank">Michael Riley</a></span>
+                                    <span class="fab fa-linkedin"><a href="https://www.linkedin.com/in/michaelryanriley" target="_blank">Michael Riley</a></span>
                                 </a>
                             </li>
                             <li class="list-inline-item">
@@ -178,11 +178,11 @@
                             <li class="list-item h3 mb-4">Software</li>
                             <li class="list-item h6 fw-normal mb-3 text-muted">JIRA, Confluence</li>
                             <li class="list-item h6 fw-normal mb-3 text-muted">PyCharm, IntelliJ</li>
-                            <li class="list-item h6 fw-normal mb-3 text-muted">MySQL, SQL Workbench</li>
+                            <li class="list-item h6 fw-normal mb-3 text-muted">MySQL, MySQL Workbench</li>
                             <li class="list-item h6 fw-normal mb-3 text-muted">GitHub</li>
-                            <li class="list-item h6 fw-normal mb-3 text-muted">Terminal</li>
+                            <li class="list-item h6 fw-normal mb-3 text-muted">Terminal (zsh)</li>
                             <li class="list-item h6 fw-normal mb-3 text-muted">Postman</li>
-                            <li class="list-item h6 fw-normal mb-3 text-muted">Figma/Gliffy/Draw.io</li>
+                            <li class="list-item h6 fw-normal mb-3 text-muted">Figma/Draw.io</li>
                         </ul>
                     </div>
                 </div>
