--- a/serveRecos-app/apps/templates/includes/footer.html
+++ b/serveRecos-app/apps/templates/includes/footer.html
@@ -4,52 +4,48 @@
                 <div class="col-md-4">
                     <img class="navbar-brand-dark mb-4" height="35" src="/static/assets/img/brand/light.svg"
                         alt="Logo light">
-                    <p>Pixel is a free and open source Bootstrap 5 UI Kit that will help you prototype and build beautiful website pages and applications.</p>
+                    <p>ServeUpRecos</strong> creates EMR/EHR mock workflows to demonstrate predictive medicine capabilities</p>
                     <ul class="social-buttons mb-5 mb-lg-0">
                         <li>
-                            <a href="https://twitter.com/themesberg" aria-label="twitter social link"
+                            <a href="#" aria-label="twitter social link"
                                 class="icon-white me-2">
                                 <span class="fab fa-twitter"></span>
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.facebook.com/themesberg/" class="icon-white me-2"
+                            <a href="#" class="icon-white me-2"
                                 aria-label="facebook social link">
                                 <span class="fab fa-facebook"></span>
                             </a>
                         </li>
                         <li>
-                            <a href="https://github.com/themesberg" aria-label="github social link" class="icon-white me-2">
+                            <a href="#" aria-label="github social link" class="icon-white me-2">
                                 <span class="fab fa-github"></span>
                             </a>
                         </li>
                         <li>
-                            <a href="https://dribbble.com/themesberg" class="icon-white" aria-label="dribbble social link">
+                            <a href="#" class="icon-white" aria-label="dribbble social link">
                                 <span class="fab fa-dribbble"></span>
                             </a>
                         </li>
                     </ul>
                 </div>
                 <div class="col-6 col-md-2 mb-5 mb-lg-0">
-                    <span class="h5">Themesberg</span>
+                    <span class="h5">ServeUpRecos</span>
                     <ul class="footer-links mt-2">
-                        <li><a target="_blank" href="https://themesberg.com/blog">Blog</a></li>
-                        <li><a target="_blank" href="https://themesberg.com/products">Products</a></li>
-                        <li><a target="_blank" href="https://themesberg.com/about">About Us</a></li>
-                        <li><a target="_blank" href="https://themesberg.com/contact">Contact Us</a></li>
+                        <li><a target="_blank" href="#">Blog</a></li>
+                        <li><a target="_blank" href="#">Products</a></li>
+                        <li><a target="_blank" href="#">About Us</a></li>
+                        <li><a target="_blank" href="#">Contact Us</a></li>
                     </ul>
                 </div>
                 <div class="col-6 col-md-2 mb-5 mb-lg-0">
                     <span class="h5">Other</span>
                     <ul class="footer-links mt-2">
-                        <li><a href="https://themesberg.com/docs/bootstrap-5/pixel/getting-started/quick-start/"
-                                target="_blank">Docs</a></li>
-                        <li><a href="https://themesberg.com/docs/pixel-bootstrap/getting-started/changelog"
-                                target="_blank">Changelog</a></li>
-                        <li><a target="_blank" href="https://themesberg.com/licensing">License</a>
-                        </li>
-                        <li><a target="_blank"
-                                href="https://github.com/themesberg/pixel-bootstrap-ui-kit/issues">Support</a></li>
+                        <li><a href="#" target="_blank">Docs</a></li>
+                        <li><a href="#" target="_blank">Changelog</a></li>
+                        <li><a target="_blank" href="#">License</a></li>
+                        <li><a target="_blank" href="#">Support</a></li>
                     </ul>
                 </div>
                 <div class="col-12 col-md-4 mb-5 mb-lg-0">
@@ -77,13 +73,13 @@
             <hr class="bg-secondary my-3 my-lg-5">
             <div class="row">
                 <div class="col mb-md-0">
-                    <a href="https://themesberg.com" target="_blank" class="d-flex justify-content-center mb-3">
-                        <img src="/static/assets/img/themesberg.svg" height="30" class="me-2" alt="Themesberg Logo">
-                        <p class="text-white fw-bold footer-logo-text m-0">Themesberg</p>
+                    <a href="#" target="_blank" class="d-flex justify-content-center mb-3">
+<!--                      <img src="/static/assets/img/#.svg" height="30" class="me-2" alt="ServeUpRecos Logo">-->
+                        <p class="text-white fw-bold footer-logo-text m-0">ServeUpRecos</p>
                     </a>
                     <div class="d-flex text-center justify-content-center align-items-center" role="contentinfo">
                         <p class="fw-normal font-small mb-0">
-                            &copy; Themesberg - coded by AppSeed.
+                            &copy; ServeUpRecos coded by Michael Riley.
                         </p>
                     </div>
                 </div>
