home and first workflow templates

--- a/serveRecos-app/apps/templates/includes/navigation.html
+++ b/serveRecos-app/apps/templates/includes/navigation.html
@@ -31,10 +31,10 @@
                                         <h6 class="d-block mb-3 text-primary">Main pages</h6>
                                         <ul class="list-style-none mb-4">
                                             <li class="mb-2 megamenu-item">
-                                                <a class="megamenu-link" href="/about.html">About</a>
+                                                <a class="megamenu-link" href="/index.html">Home</a>
                                             </li>
                                             <li class="mb-2 megamenu-item">
-                                                <a class="megamenu-link" href="/contact.html">Contact</a>
+                                                <a class="megamenu-link" href="/dd_interactions.html">Drug-Drug Interactions</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -42,7 +42,10 @@
                                         <h6 class="d-block mb-3 text-primary">Landings</h6>
                                         <ul class="list-style-none mb-4">
                                             <li class="mb-2 megamenu-item">
-                                                <a class="megamenu-link" href="/about_me.html">About Me</a>
+                                                <a class="megamenu-link" href="/about.html">About ServeUpRecos</a>
+                                            </li>
+                                            <li class="mb-2 megamenu-item">
+                                                <a class="megamenu-link" href="/about_me.html">About Mike</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -131,8 +134,6 @@
                 <div class="d-flex align-items-center">
                     <a href="{{ url_for('authentication_blueprint.logout') }}"
                        class="btn btn-outline-gray-100 d-none d-lg-inline me-md-3"><span class="fas fa-sign-out-alt me-2"></span> Logout</a>
-                    <a href="https://appseed.us/product/pixel-bootstrap/flask/" 
-                       target="_blank" class="btn btn-tertiary"><i class="fas fa-cloud-download-alt me-2"></i> Download</a>
                     <button class="navbar-toggler ms-2" type="button" data-bs-toggle="collapse" data-bs-target="#navbar_global" aria-controls="navbar_global" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
